Code Cleanup IntelliJ